[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lt_separation"
version = "0.0.1"
description = "Analysis framework for Rosenbluth (LT) separation of cross section."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "iminuit",
    "numba",
    "cffi",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["lt_separation"]

[tool.black]
line-length = 88
skip-string-normalization = true
skip-magic-trailing-comma = false
